# python-template

./: .envrc.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint_and_test.yaml
tests/: test_example.py
