[tool.poetry]
name = "backend_boilerplate"
version = "0.1.0"
description = "Boilerplate for python web apps"
authors = ["Stepan Artov <stepanartov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^22.3.0"
pydantic = {extras = ["email"], version = "^1.10.6"}
arrow = "^1.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
isort = "^5.11.4"
black = "^23.1.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
flake8-builtins = "^2.1.0"
flake8-bugbear = "^23.3.12"
flake8-coding = "^1.3.2"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-quotes = "^3.3.2"
pytest-asyncio = "^0.20.3"
testcontainers = {version = "^3.7.1", extras = ["postgresql"]}
faker = "^17.6.0"
pytest-mock = "^3.10.0"
python-dotenv = "^1.0.0"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = 'migrations'

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
use_parentheses = true
skip_gitignore = true
skip = ['migrations']

[tool.mypy]
exclude = ['tests', 'migrations']
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ['tests.*', 'migrations.*']
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
